# caseforge-core

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  THIRD_PARTY_NOTICES.md  VERDICT-FORK.md  package-lock.json  package.json
.github/workflows/: caseforge-fixtures.yml
configs/: ingest-profiles.yaml  llm-gateway.litellm.yaml  model-routes.yaml  ocr-profiles.yaml  provider-capabilities.yaml
configs/opencode/: opencode.json
crates/caseforge-core/: Cargo.toml  README.md
crates/caseforge-core/src/: main.rs
crates/caseforge-fleet/: Cargo.toml  README.md
crates/caseforge-fleet/src/: attach.rs  fleet.rs  launch.rs  main.rs  session.rs  socket.rs  status.rs  ui.rs
crates/caseforge-ingest/: Cargo.toml  README.md
crates/caseforge-ingest/src/: main.rs
docs/: ARCHITECTURE.md  BUILD_ORDER.md  DGX-SPARK.md  EXTERNAL_WORKBENCH_BRIDGES.md  GROK_CLOUD.md  LLM_SUPPORT_2026.md  LOCAL_LLM_FIX_TRACKING.md  LOCAL_LLM_SEAL_FAILURE.md  M28_RESIDUALS.md  MODEL_ROUTING.md  PRD.md  SECURITY.md  SPARK_INVESTIGATION_RESULTS.md  SPARK_SEAL_RECEIPT.md  image-grader.md  offline-llm-test.md  spark-scorecard-auto-95f54362.json
engine/: AGENTS.md  CLAUDE.md  README.md  VERDICT-FORK.md
engine/scripts/: verdict-rebrand.sh
fixtures/dfir-image-bench/: ai-present.verdict.json
scripts/: bootstrap.sh  doctor.sh  evtx-1102-probe.py  grok-cloud-smoke.sh  lab.sh  local-route-readiness-smoke.sh  operator-chatgpt-smoke.sh  run-local-llm-smoke.sh  run-local-smoke.sh  score-image-run.mjs  score-offline-run.mjs  selftest.mjs  setup.sh  spark-local-seal-smoke.sh  start-llm-gateway.sh
(+35 files in other folders)
